tests/models/enum/named/i128/fail/expected.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(expected = "val")]
        i128
    ),
}
fn main() {}
